--- a/SudokuSolver/SudokuSolver/SudokuSolver.csproj
+++ b/SudokuSolver/SudokuSolver/SudokuSolver.csproj
@@ -43,12 +43,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cell.cs" />
+    <Compile Include="ColReducerSolver.cs" />
+    <Compile Include="HouseReducerSolver.cs" />
     <Compile Include="OneOptionSolver.cs" />
     <Compile Include="PuzzleCreator.cs" />
     <Compile Include="PuzzleSolver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Puzzle.cs" />
+    <Compile Include="RowReducerSolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
